<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RHCimax</string>
    <string name="action_settings">Settings</string>
    <string name="lista_vacia">Lista vacia</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="aceptar">Aceptar</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="title_activity_clientes">Clientes</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="clientesRHClimax">Clientes RH Climax</string>
    <string name="nuevo">Nuevo</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_settings">Settings</string>
    <string name="BDApp">BD App RHCimax</string>
    <string name="server">Server:</string>
    <string name="guardar">Guardar</string>
    <string name="clientes">Clientes</string>
    <string name="title_activity_aplicacion">Aplicacion</string>
    <string name="title_activity_log_out">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_activity_datos_cliente">DatosClienteActivity</string>
    <string name="datosCliente">Datos del cliente</string>
    <string name="title_activity_servicios">ServiciosActivity</string>
    <string name="servicios">Servicios</string>
    <string name="title_activity_tab_group">TabGroupActivity</string>
    <string name="title_activity_clientes_group">ClientesGroupActivity</string>
    <string name="title_activity_fila_cliente">FilaClienteActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="empresa">Empresa</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_campo_oblig">*Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="telefono_campo_oblig">*Teléfono</string>
    <string name="sitioWeb">Sitio Web</string>
    <string name="dir_fiscal">Dir. Fiscal</string>
    <string name="dir_fiscal_campo_oblig">*Dir. Fiscal</string>
    <string name="direccion_fiscal">Dirección Fiscal</string>
    <string name="dir_Comercial">Dir. Comercial</string>
    <string name="direccion_comercial">Dirección Comercial</string>
    <string name="title_activity_datos_empresa">DatosEmpresaActivity</string>
    <string name="empleado">Contacto</string>
    <string name="datosEmpresa">Datos de Empresa</string>
    <string name="cliente">Cliente</string>
    <string name="rif">Rif</string>
    <string name="rif_campo_oblig">*Rif</string>
    <string name="copiar">Copiar</string>
    <string name="empleados">Contactos</string>
    <string name="historialCotizaciones">Historial de cotizaciones</string>
    <string name="salvar">Salvar</string>
    <string name="cotizar">Cotizar</string>
    <string name="apellido">Apellido</string>
    <string name="apellido_campo_oblig">*Apellido</string>
    <string name="posicion">Posición</string>
    <string name="celular">Celular</string>
    <string name="email">Email</string>
    <string name="email_campo_oblig">*Email</string>
    <string name="descripcion">Descripción</string>
    <string name="linkedin">Linkedin</string>
    <string name="telf_oficina">Telf. Oficina</string>
    <string name="telefono_oficina">Teléfono Oficina</string>
    <string name="ver_empresa">Ver Empresa</string>
    <string name="pin">Pin</string>
    <string name="title_activity_fila_empleado">FilaEmpleadoActivity</string>
    <string name="mas">+</string>
    <string name="agregarEmpleado">Agregar Contacto</string>
    <string name="enviarA">Enviar a:</string>
    <string name="totalPorServicio">Total por el servicio</string>
    <string name="mensual">Mensual</string>
    <string name="mensualBs">Mensual (Bs.)</string>
    <string name="total">Total</string>
    <string name="totalBs">Total (Bs.)</string>
    <string name="ver_servicio">Ver Servicio</string>
    <string name="empresas">Empresas</string>
    <string name="calcular">Calcular</string>
    <string name="editar_servicio">Editar Servicio</string>
    <string name="title_activity_historicos">HistoricosActivity</string>
    <string name="title_activity_tareas">TareasActivity</string>
    <string name="actualizar">Actualizar</string>
    <string name="historicos">Históricos</string>
    <string name="tareas">Tareas</string>
    <string name="tarea">"Tarea      "</string>
    <string name="tarea2">"Tarea:"</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_campo_oblig">*Fecha</string>
    <string name="finalizar">Finalizar</string>
    <string name="hora">Hora</string>
    <string name="hora_campo_oblig">*Hora</string>
    <string name="minutos">Minutos</string>
    <string name="ver_empleado">Ver Contacto</string>
    <string name="limpiar">Limpiar</string>
    <string name="agregar_tarea">Agregar Tarea</string>
    <string name="title_activity_datos_tarea">DatosTareaActivity</string>
    <string name="marcar_como_finalizado">Marcar tarea como finalizada</string>
    <string name="nueva_tarea">Nueva tarea</string>
    <string name="checkin">Check-In</string>
    <string name="eliminar">Eliminar</string>
    <string name="nota_tarea">Nota: Si marca la tarea como finalizada, luego no podrá modificarla.</string>
    <string name="destinatario">Destinatario</string>
    <string name="opciones">Opciones</string>
    <string name="precio">Precio</string>
    <string name="inicial">Inicial</string>
    <string name="unidad">Unidad</string>
    <string name="cantidad">Cantidad</string>
    <string name="servicio">Servicio</string>
    <string name="no_resultados">No se consiguieron resultados.</string>
    <string name="error_permiso_empleado">Usted no tiene permisos para editar la información de este contacto. Sólo los contactos ingresados por usted podrán ser modificados.</string>
    <string name="error_permiso_empresa">Usted no tiene permisos para editar la información de esta empresa. Sólo las empresas ingresadas por usted podrán ser modificadas.</string>
    
    
    
    
	<!-- \u0020 = espacios en blanco -->
	<!-- Si vas a cambiar estos valores, modificalos tambien en TareaSqliteDao en la funcion buscarTareaFilter -->
    <string-array name="historicos_filtro_array">
        <item>Todos</item>
        <item>Hoy</item>
        <item>Ayer</item>
        <item>Esta semana</item>
    </string-array>

    

</resources>