<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

    <!--_____________________ Botones barra superior _____________________-->
	<include layout="@layout/barra_tareas_superior"/>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
		    style="@style/ContenedorPrincipal"
		    tools:context=".DatosTareaActivity" >
		
		    <TextView
		        android:id="@+id/textViewTareas"
		        style="@style/FuenteTitulos"
		        android:text="@string/tarea" />
		
		
		    <!--____________________ Inicio formulario ______________________________-->

			
			<TableLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:padding="3dip"
		        android:stretchColumns="1" >
			    
			    <TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		            
			        <TextView
					    android:id="@+id/textViewNombre"
					    style="@style/FuenteFormularios"
					    android:text="@string/nombre_campo_oblig" />
			
				    <EditText
				        android:id="@+id/editTextNombre"
				        android:hint="@string/nombre"
				        style="@style/FuenteEditTextBasico" >
				    </EditText>
		        </TableRow>
		        
		        <TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center" >
		        
					<TextView
					    android:id="@+id/textViewEmpresa"
					    style="@style/FuenteFormularios"
					    android:text="@string/empresa" />
			
			        <AutoCompleteTextView 
					    android:id="@+id/autocompleteEmpresa"
					    android:hint="@string/empresa"
					    android:imeOptions="actionNext"
					     android:textColor="@android:color/black"
					    style="@style/FuenteEditTextBasico" />
			        
			        <!-- Campo que almacena id de la empresa. 
		                 Este campo esta oculto. Se necesita para el boton ver Empresa. -->
					<EditText
						android:id="@+id/textEditHiddenIdEmpresa"
						android:visibility="gone"
						android:inputType="number" />
		
			        <ImageButton
						android:id="@+id/imageButtonVerEmpresa"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@android:drawable/ic_menu_view" 
						android:contentDescription="@string/ver_empresa"/>
			        
				</TableRow>
				<TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center" >
			        
			        <TextView
					    android:id="@+id/textViewEmpleado"
					    style="@style/FuenteFormularios"
					    android:text="@string/empleado" />
			
			        <com.nahmens.rhcimax.utils.InstantAutoComplete  
					    android:id="@+id/autocompleteEmpleado"
					    android:hint="@string/empleado"
					    android:imeOptions="actionNext"
					    android:textColor="@android:color/black"
					    style="@style/FuenteEditTextBasico" />

			        <!-- Campo que almacena id del empleado. 
		                 Este campo esta oculto. Se necesita para el boton ver Empleado. -->
					<EditText
						android:id="@+id/textEditHiddenIdEmpleado"
						android:visibility="gone"
						android:inputType="number" />
			        
			        <ImageButton
						android:id="@+id/imageButtonVerEmpleado"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@android:drawable/ic_menu_view" 
						android:contentDescription="@string/ver_empleado"/>
		        </TableRow>
		        
		        <TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		        
					<TextView
					    android:id="@+id/textViewFecha"
					    style="@style/FuenteFormularios"
					    android:text="@string/fecha_campo_oblig" />
			
			        <Button
			            android:id="@+id/buttonFecha" >
			        </Button>
			        
			    </TableRow>
				<TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >

			        <TextView
					    android:id="@+id/textViewTime"
					    style="@style/FuenteFormularios"
					    android:text="@string/hora_campo_oblig" />
			
			        <Button
			            android:id="@+id/buttonHora">
			        </Button>
		
		        </TableRow>
				<TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
			        
					<TextView
					    android:id="@+id/textViewDescripcion"
					    style="@style/FuenteFormularios"
					    android:text="@string/descripcion" />
				
					<EditText
				        android:id="@+id/editTextDescripcion"
				        android:hint="@string/descripcion"
			            style="@style/FuenteEditTextBasico"/>
				    
				</TableRow>
			</TableLayout>

			
		    <CheckBox 
		        android:id="@+id/checkBoxFinalizada"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/marcar_como_finalizado"/>
		    
		    <TextView
				style="@style/FuenteObservacion"
				android:text="@string/nota_tarea"/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>