<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ContenedorPrincipal"
    tools:context=".DatosClienteActivity" >

    <TextView
        android:id="@+id/textViewDatosCliente"
        style="@style/FuenteTitulos"
        android:text="@string/datosEmpresa" />
    
    <TextView
        android:id="@+id/textViewEmpleado"
        style="@style/FuenteSubTitulos"
        android:text="@string/empresa" />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="3dip"
        android:stretchColumns="1,3" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewNombEmpresa"
                style="@style/FuenteFormularios"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/textEditNombEmpresa"
                android:inputType="text" >
            </EditText>
            
            <TextView
                android:id="@+id/textViewTelfEmpresa"
                style="@style/FuenteFormularios"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/textEditTelfEmpresa"
                android:inputType="text" >
            </EditText>
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewWebEmpresa"
                style="@style/FuenteFormularios"
                android:text="@string/sitioWeb" />

            <EditText
                android:id="@+id/textEditWebEmpresa"
                android:inputType="text" >
            </EditText>
            
            <TextView
                android:id="@+id/textViewDirEmpresa"
                style="@style/FuenteFormularios"
                android:text="@string/direccion" />

            <EditText
                android:id="@+id/textEditDirEmpresa"
                android:inputType="text" >
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>