<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

    <!--_____________________ Botones barra superior _____________________-->
	<include layout="@layout/barra_servicios_superior"/>
	
	<ScrollView 
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
		    style="@style/ContenedorPrincipal"
		    tools:context=".ServiciosActivity" >
		
		    <TextView
		        android:id="@+id/textViewServicios"
		        style="@style/FuenteTitulos"
		        android:text="@string/servicios" />
		    
		
		    <TextView
		        android:id="@+id/textViewEmpresa"
		        android:textIsSelectable="false"
		        style="@style/FuenteSubSubTitulos"/>
		    

		        
		        <TextView 
		            android:id="@+id/textViewEnviarA"
		            style="@style/FuenteFormularios"
		            android:text="@string/enviarA"
		            android:paddingRight="10dp"/>
		        
		        
		        <HorizontalScrollView 
        			android:layout_width="match_parent" 
        			android:layout_height="wrap_content">
        
			        <TableLayout
		                android:id="@+id/tableLayoutListaCorreos"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" />
			        
		  		</HorizontalScrollView>
		     <!--   <ListView
			        android:id="@+id/listViewCorreos"
			        android:layout_width="match_parent"
			        android:layout_height="0dp"
			        android:layout_weight="1" /> -->


		    <TextView 
		    	android:id="@+id/textViewServ"
		        style="@style/FuenteSubTitulos"
		        android:text="@string/servicios"/>
		
		    
		    <ListView
			    android:id="@+id/listViewServicios"
			    android:layout_width="match_parent"
			    android:fadeScrollbars="false"
			    android:layout_height="0dp"
				android:layout_weight="1"/>
		    
		    <TextView
		    	android:id="@+id/textViewDescripcion"
		        style="@style/FuenteSubTitulos"
		        android:text="@string/descripcion" />	
		        
			<EditText
				android:id="@+id/textEditDescripcion"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/FuenteEditTextBasico"/>
		
		    
		    <TextView 
			   	android:id="@+id/textViewTotalPorServicio"
			    style="@style/FuenteSubTitulos"
			    android:text="@string/totalPorServicio"/>

		
		    <TableLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:padding="3dip"
		        android:stretchColumns="1,3" >
		
		        <TableRow
		            android:id="@+id/tableRowTotal"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            tools:ignore="UselessParent" >
		
		            <TextView
		                android:id="@+id/textViewMensual"
		                style="@style/FuenteFormularios"
		                android:text="@string/mensual" />
		
		            <EditText
		                android:id="@+id/textEditMensual"
		                android:inputType="numberDecimal" 
		                android:enabled="false">
		            </EditText>
		            
		            <TextView
		                android:id="@+id/textViewTotal"
		                style="@style/FuenteFormularios"
		                android:text="@string/total" />
		
		            <EditText
		                android:id="@+id/textEditTotal"
		                android:inputType="numberDecimal"
		                android:enabled="false" />
		
		        </TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>