<?xml version="1.0" encoding="utf-8"?>
<!-- Usado en los formularios de empresas y empleados -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:clickable="true"
    android:background="#D8D8D8">

	<!--_____________________ Botones izquierda: tareas, historicos _____________________-->
	<LinearLayout
		android:id="@+id/LinearLayoutButtonTareas"
		style="@style/BotonPersonalizadoContenedor"
		android:clickable="true"
		android:layout_marginLeft="10dp"
		android:background="@drawable/boton_personalizado" >
		        
		<ImageView
			style="@style/BotonPersonalizadoImagen"
		    android:background="@android:drawable/ic_menu_agenda"
		    android:contentDescription="@string/tareas"/>

		<TextView
		    android:text="@string/tareas"
		    style="@style/BotonPersonalizadoTexto" />

	</LinearLayout>
	<!--_____________________ Separador _____________________-->
	<View
	    android:layout_width="1dp"
	    android:layout_height="30dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@android:color/darker_gray"/>
	<!--_____________________ FIN Separador _____________________-->
	    
	<LinearLayout
		android:id="@+id/LinearLayoutButtonHistoricos"
	    style="@style/BotonPersonalizadoContenedor"
	    android:clickable="true"
		android:background="@drawable/boton_personalizado">
		        
		<ImageView
			style="@style/BotonPersonalizadoImagen"
		    android:background="@android:drawable/ic_menu_recent_history"
		    android:contentDescription="@string/historicos" />

		<TextView
			android:text="@string/historicos"
		    style="@style/BotonPersonalizadoTexto" />

	</LinearLayout>

		     
	<!--_____________________ Botones derecha: salvar, cotizar _____________________-->
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="right">
	    
		<Button
			android:id="@+id/buttonSalvar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/salvar" />
		          			
		<Button
			android:id="@+id/buttonCotizar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cotizar" />
	</LinearLayout>
</LinearLayout>